# EconoNet

./: .env.example  .gitignore  BUG_FIXES.md  CICD_ALL_ERRORS_FIXED.md  CICD_IMPORT_FIXES.md  CICD_SURGERY_REPORT.md  Dockerfile  MISSION_ACCOMPLISHED.md  Makefile  NEWS_MODULE_MISSION_ACCOMPLISHED.md  README.md  README_NERVA.md  SPRINT_1_COMPLETE.md  STREAMLIT_WARNING_ELIMINATION.md  TECHNICAL_DOCUMENTATION.md  app.py  econonet_ultra_fixed.py  enhanced_streamlit_app.py  features_summary.py  immersive_dashboard.py  launch_nerva.py  launch_nerva_enhanced.py  launch_nerva_ultimate.py  nerva_divine_dashboard.py  nerva_professional_dashboard.py  notebook_integrator.py  pipeline_health_check.py  pyproject.toml  realtime_predictor.py  requirements-dev.txt  requirements.txt  requirements_nerva.txt  run_tests.py  setup.cfg  streamlit_app.py  test_dashboard.py  test_fixes.py  test_nerva.py  test_nerva_analysis.py  test_nerva_complete.py  (+4 more)
.github/workflows/: ci-cd.yml  lint-test.yml  notebooks-smoke.yml  streamlit-check.yml
.streamlit/: config.toml
dashboard/: app.py
dashboard/pages/: Notebook_Explorer.py
data/fetched/: wb_KEN_NY.GDP.MKTP.CD_1999_2025.json
data/parquet/: annual_gdp.parquet  central_bank_rate_cbr__.parquet  central_bank_rates_.parquet  cheques__efts.parquet  commercial_banks_weighted_average_rates_.parquet  daily_kes_interbank_activity_report.parquet  diaspora_remittances.parquet  discount_window.parquet  domestic_debt_by_instrument.parquet  domestic_foreign_currency_cheques.parquet  foreign_trade_summary_ksh_million.parquet  government_securities_auction_and_maturities_schedule.parquet  horizontal_repo_market.parquet  interbank_rates__.parquet  interbank_rates__volumes.parquet  issues_of_treasury_bills.parquet  issues_of_treasury_bonds.parquet  kepssrtgs.parquet  mobile_payments.parquet  monthly_exchange_rate_end_period.parquet  monthly_exchange_rate_period_average.parquet  number_of_atms,_atm_cards,__pos_machines.parquet  number_of_transactions.parquet  principal_exports_volume,_value_and_unit_prices_ksh_million.parquet  public_debt.parquet  repo_and_reverse_repo_.parquet  revenue_and_expenditure.parquet  trade_weighted_average_indicative_rates.parquet  value_of_direct_imports_from_selected_african_countries_ksh._million.parquet  value_of_direct_imports_from_selected_rest_of_world_countries__kshs._millions.parquet  value_of_exports_to_selected_african_countries_ksh_million.parquet  value_of_exports_to_selected_rest_of_world_countries_ksh_million.parquet  value_of_selected_domestic_exports_ksh_million.parquet  value_of_transactions_kshs._millions.parquet
data/processed/: data_catalog.csv
data/raw/: Central Bank Rate (CBR)  .csv  Central Bank Rates ().csv  Cheques  EFTs.csv  Commercial Banks Weighted Average Rates ().csv  Daily KES Interbank Activity Report.csv  Diaspora Remittances.csv  Discount Window.csv  Domestic Foreign Currency Cheque(s).csv  Foreign Trade Summary (Ksh Million).csv  Government Securities Auction and Maturities Schedule.csv  Horizontal Repo Market.csv  Interbank Rates  Volumes.csv  Interbank Rates () .csv  Issues of Treasury Bills.csv  Issues of Treasury Bonds.csv  KEPSSRTGS.csv  Monthly Exchange rate (period average).csv  Monthly exchange rate (end period).csv  Number of ATMs, ATM Cards,  POS Machines.csv  Number of Transactions.csv  Principal Exports Volume, Value and Unit Prices (Ksh Million).csv  Repo and Reverse Repo .csv  TRADE WEIGHTED AVERAGE INDICATIVE RATES.csv  Value of Direct Imports from Selected African Countries (Ksh. Million).xlsx  Value of Direct Imports from Selected Rest of World Countries  (Kshs. Millions).csv  Value of Exports to Selected African Countries (Ksh Million).csv  Value of Exports to Selected Rest of World Countries (Ksh Million).csv  Value of Selected Domestic Exports (Ksh Million).csv  Value of Transactions (Kshs. Millions).csv
docs/: NEWS_MODULE_DOCUMENTATION.md  architecture.md  data_sources.md  usage.md
nerva/: __init__.py
nerva/analytics/: advanced_engine.py
nerva/config/: __init__.py  settings.py
nerva/core/: notebook_manager.py
nerva/data/: __init__.py  real_time_engine.py  streaming.py
nerva/etl/: __init__.py  feature_engine.py  processor.py
nerva/models/: __init__.py  advanced.py  baseline.py  professional_suite.py  registry.py
nerva/ui/: __init__.py  dashboard.py  enhanced_dashboard.py  professional_styles.py
notebooks/: Advanced_Inflation_Modeling.ipynb  Banking_Financial_Markets_Analysis.ipynb  Data_Exploration.ipynb  Debt_Analysis.ipynb  Diaspora_Remittances_Analysis.ipynb  Divine_CBR_Analysis.ipynb  Divine_Debt_Dashboard_demo.ipynb  Divine_Debt_Modeling.ipynb  Divine_Trade_Balance_Analysis.ipynb  Enhanced_Inflation_Modeling.ipynb  FX_modeling.ipynb  Foreign_Trade_Analysis.ipynb  GDP_Analysis.ipynb  Government_Finance_Analysis.ipynb  Inflation_modeling.ipynb  Interbank_Markets_Analysis.ipynb  Liquidity_modeling.ipynb  Market_Dynamics_Intelligence.ipynb  Mobile_Transactions_Analysis.ipynb  Neural_Economic_Prophet.ipynb  Policy_Simulation_Engine.ipynb  Predictive_Models.ipynb  Quantum_FX_Dynamics.ipynb  Real_GDP_Deep_Analysis.ipynb  Risk_Analysis.ipynb
pages/: 1_🔮_Predictive_Models.py  1_🧠_Enhanced_Predictive_Models.py  2_⚠️_Risk_Analysis.py  2_🛡️_Enhanced_Risk_Analysis.py  3_🤖_AI_Intelligence.py  4_📈_Market_Intelligence.py  5_📊_EDA.py
src/: advanced_data_processor.py  advanced_financial_instruments.py  advanced_neural_models.py  advanced_sentiment_analysis.py  api_integration.py  data_fetchers.py  data_processor.py  debt_model.py  fx_model.py  gdp_model.py  inflation_model.py  notebook_integration.py  pipeline_diagnostics.py  trade_model.py  ultimate_economic_models.py  ultra_ml_ensemble.py  universal_predictor.py
src/econonet/: __init__.py  config.py  live_apis.py  live_news.py
src/models/: BaseDebtPredictor.py  __init__.py  forecasting.py  fx_model.py  risk.py
src/utils/: plotting.py  (+2 more)
tests/: __init__.py  conftest.py  test_config.py  test_dashboards.py  test_live_apis.py  test_live_news.py  test_models.py  test_news_basic.py  test_notebooks.py  test_streamlit_app.py
(+5 files in other folders)
