[metadata]
name = econet
version = 1.0.0
description = Advanced Economic Intelligence Platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MadScie254/EconoNet
author = EconoNet Team
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    streamlit>=1.28.0
    pandas>=1.5.0
    numpy>=1.21.0
    plotly>=5.17.0
    requests>=2.31.0
    feedparser>=6.0.10
    textblob>=0.17.1

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.0.0
    ruff>=0.0.280
    mypy>=1.5.0

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short --strict-markers
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests

[coverage:run]
source = src/econonet
omit = 
    */tests/*
    */test_*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    .pytest_cache,
    .mypy_cache,
    .venv,
    venv,
    build,
    dist

[isort]
profile = black
line_length = 120
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True

[ruff]
line-length = 120
select = ["E", "F", "W", "C90"]
ignore = ["E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
]
